image issues, section header size on mobile

--- a/src/components/SectionHeader.scss
+++ b/src/components/SectionHeader.scss
@@ -1,6 +1,6 @@
 .section-header {
   h2.section-heading {
-    font-size: 60px;
+    font-size: 45px;
     margin-top: 0;
     margin-bottom: 15px;
     @include script-font;
@@ -12,5 +12,24 @@
     margin-bottom: 75px;
     text-transform: none;
     @include serif-font;
+  }
+}
+
+@media (min-width: 768px) {
+  .section-header {
+    h2.section-heading {
+      font-size: 60px;
+      margin-top: 0;
+      margin-bottom: 15px;
+      @include script-font;
+    }
+    h3.section-subheading {
+      font-size: 16px;
+      font-weight: 400;
+      font-style: italic;
+      margin-bottom: 75px;
+      text-transform: none;
+      @include serif-font;
+    }
   }
 }
